<resources>
    <string name="app_name" translatable="false">Dermatify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="journey">Journey</string>
    <string name="learn">Learn</string>
    <string name="wishlist">Wishlist</string>
    <string name="name">Name</string>
    <string name="name_error">Name can\'t be empty. Please enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error">Password can\'t be less than 8 characters</string>
    <string name="password_empty_error">Password can\'t be empty</string>
    <string name="password_notvalid_error">Password must contain lowercase letters, uppercase letters, and numbers</string>
    <string name="email_error">You typed the wrong email format\nCorrect email format: example@your.domain</string>
    <string name="email_empty_error">Email can\'t be empty</string>
    <string name="hint_email">Please enter your email</string>
    <string name="hint_name">Please enter your name</string>
    <string name="hint_password">Please enter your password</string>
    <string name="onboarding_title">Track, analyze, and improve your skin</string>
    <string name="onboarding_subtitle">Dermatify exists to help you identify skin issues\neffectively and give personalized treatment\nrecommendation</string>
    <string name="login">Login</string>
    <string name="login_title">Take control of your\nskin\'s well-being</string>
    <string name="login_in_register">Already have an account?</string>
    <string name="register">Register</string>
    <string name="register_title">Join us and discover the secrets to healthier skin</string>
    <string name="register_in_login">Don\'t have an account?</string>
    <string name="login_w_google">Login with Google</string>
    <string name="continue_w_google">Continue with Google</string>
    <string name="create_acc">Create an account</string>
    <string name="lottie_assets_name">\@drawable/placeholder_onboarding_illus</string>
    <string name="hi_name_home_header">Hi, %1$s!</string>
    <string name="cd_emoji_of_waving_hand">Emoji of waving hand</string>
    <string name="cd_user_profile_picture">User profile picture</string>
    <string name="home_cta_header_title">Have you checked\nyour facial skin today?</string>
    <string name="home_cta_header_subtitle"><![CDATA[Unveil your glowing & healthy skin here.]]></string>
    <string name="home_header_cta">Examine your skin</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="all_results">All Results</string>
    <string name="skin_analysis_result">Skin Analysis Result</string>
    <string name="dark_circles">Eye bags</string>
    <string name="redness">Redness</string>
    <string name="acnes">Acne</string>
    <string name="cd_dark_circles">Dark circles under the eye icon</string>
    <string name="recent_user_scan_photo">Recent user scan photo</string>
    <string name="learn_more">Learn More</string>
    <string name="highlights">Highlights</string>
    <string name="profile">Profile</string>
    <string name="john_doe">John Doe</string>
    <string name="email_dummy">johndoe@gmail.com</string>
    <string name="cd_change_language">Change app\'s language icon\n</string>
    <string name="change_language">Change language</string>
    <string name="change_language_subtitle">Pick the language setting you’d like to use.</string>
    <string name="credits">Credits</string>
    <string name="credits_subtitle">A tribute to the illustrators who helped us brought Dermatify to life visually.</string>
    <string name="meet_team_subtitle">All the minds behind Dermatify.</string>
    <string name="logout">Logout</string>
    <string name="article_title" translatable="false">Article Title</string>
    <string name="article_subtitle" translatable="false">Article Subtitle</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="remove_photo">Remove profile picture</string>
    <string name="edit_profile_button">Edit profile button</string>
    <string name="save">Save</string>
    <string name="change_language_title">Change Language</string>
    <string name="change_language_dialog_title">Change language?</string>
    <string name="english">English (EN)</string>
    <string name="bahasa_indonesia">Bahasa Indonesia (ID)</string>
    <string name="change_language_dialog_desc">Your language settings on the app will change to %1$s.</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="meet_the_team">Meet The Team</string>
    <string name="meet_the_team_title">We\'re part of Bangkit Academy 2024\nBy Google, GoTo, Traveloka</string>
    <string name="machine_learning" translatable="false">Machine Learning</string>
    <string name="ml_name_1" translatable="false">Muhammad Naufal Adani</string>
    <string name="ml_name_2" translatable="false">Nico Gilang Aprully</string>
    <string name="ml_name_3" translatable="false">Sherly Angelica</string>
    <string name="cloud_computing" translatable="false">Cloud Computing</string>
    <string name="cc_name_1" translatable="false">Annava Wisha Sikoko</string>
    <string name="cc_name_2" translatable="false">Daffa Muhammad Faizan</string>
    <string name="mobile_development" translatable="false">Mobile Development</string>
    <string name="md_name_1" translatable="false">Jasmine Azzahra Briliane Putri</string>
    <string name="md_name_2" translatable="false">Kevin Jeremia Pontoh</string>
    <string name="credits_subtitle_2">We\'re grateful to the talented illustrators who have contributed their creative work to bring our app to life visually. This page recognizes and celebrates their efforts.</string>
    <string name="credits_cta">Check freepik.com\nfor more illustrations</string>
    <string name="invalid_creds">Invalid credentials. Please check your email and password and enter it correctly</string>
    <string name="network_lost">Seems you lost your connection. Please try again</string>
    <string name="network_lost_2">Can\'t fetch articles, seems you lost your connection.</string>
    <string name="error_occured">An error occurred. Please try again</string>
    <string name="register_success">Account successfully created</string>
    <string name="camera_permission_granted">Camera permission is granted</string>
    <string name="camera_permission_denied">Camera permission is denied</string>
    <string name="profile_success">Profile is successfully updated</string>
    <string name="hint_month">Month</string>
    <string name="hint_week">Week</string>
    <string name="title_journey">Scan History</string>
    <string name="try_again">Try again</string>
    <string name="skin_care_101">Skincare 101</string>
    <string name="articles_on_facial_skin_health">Articles on Facial Skin Health</string>
    <string name="examine_take_picture">Please Take A Picture Of Your Skin</string>
    <string name="analyze_your_skin">Analyze Your Skin To Unveil The Secrets\nTo Healthier and Glowing Skin</string>
    <string name="scan_your_skin">Scan your skin</string>
    <string name="result">Result</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="analyzing">Analyzing</string>
    <string name="healthy_skin">Healthy skin</string>
    <string name="treatment_recs">Treament Recommendation</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="examine_again">Examine again</string>
    <string name="acnes_diagnosis_desc">Your skin analysis result shows that you have acne. Acne is a common skin condition that causes pimples and blackheads. It\'s usually caused by a combination of factors, including excess oil production, bacteria, and inflammation. To improve your acne, consider using a gentle cleanser, avoiding oil-based products, and using a topical treatment prescribed by a dermatologist.</string>
    <string name="acnes_treatment_desc">To improve your acne, consider using a gentle cleanser, avoiding oil-based products, and using a topical treatment prescribed by a dermatologist.</string>
    <string name="dark_circles_diagnosis_desc">Your skin analysis has revealed the presence of eye bags around your eyes. This condition can be caused by factors like lack of sleep, dehydration, aging, or genetic predisposition. Addressing any underlying issues, getting enough rest, staying hydrated, and using targeted skincare products may help improve the appearance of eye bags.</string>
    <string name="dark_circles_treatment_desc">To improve your eye bags, consider using a moisturizer with light-reflecting ingredients, getting enough sleep, and avoiding smoking and excessive alcohol consumption.</string>
    <string name="redness_diagnosis_desc">Your skin analysis result shows that you have redness or inflammation on your skin. Redness can be caused by a variety of factors, including rosacea, sunburn, or sensitivity to certain ingredients.</string>
    <string name="redness_treatment_desc">To improve your redness, consider using a moisturizer with soothing ingredients, avoiding irritants, and using a sunscreen with a high SPF to protect your skin from further damage.</string>
    <string name="healthy_skin_diagnosis_desc">Congratulations! Your skin analysis result shows that you have healthy skin. Healthy skin is characterized by a smooth texture, even tone, and few visible signs of aging.</string>
    <string name="healthy_skin_treatment_desc">To maintain your healthy skin, consider using a gentle cleanser, moisturizing regularly, and protecting your skin from the sun with a sunscreen.</string>
</resources>