<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:paddingHorizontal="16dp"
    tools:context="ui.login.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_small_logo_topbar" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.bangkit.android.dermatify.ui.component.EmailEditText
        android:id="@+id/edt_email_login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_mail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_email_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edt_email_login"
        app:layout_constraintStart_toStartOf="parent" />


    <com.bangkit.android.dermatify.ui.component.PasswordEditText
        android:id="@+id/edt_password_login"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_visible"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondary_pink"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password_login" />

    <Button
        android:id="@+id/btn_login_w_google"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_w_google"
        android:textColor="@color/secondary_pink"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:strokeColor="@color/secondary_pink"
        />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_in_login"
        android:textColor="@color/white"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login_w_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>