<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    tools:context=".ui.profile.EditProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:elevation="0dp"
        app:navigationIcon="@drawable/ic_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/ic_account_circle"
        android:contentDescription="@string/cd_user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:tint="@color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_pic_ph"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:contentDescription="@string/cd_user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar" />

    <Button
        style="@style/LabelTextButton"
        android:id="@+id/btn_change_profile_pic"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        android:textColor="@color/grey_variant_2"
        android:textSize="13sp"
        android:textStyle="bold"
        app:rippleColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_pic_ph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:id="@+id/tv_label_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_profile_pic" />

    <EditText
        android:id="@+id/ed_edit_name"
        android:background="@drawable/ed_underline"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="@string/hint_name"
        android:textColorHint="@color/grey_variant_1"
        android:text="John Doe"
        app:colorControlNormal="@color/white"
        app:colorControlActivated="@color/white"
        app:colorControlHighlight="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_edit_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/email_dummy"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_email" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/tertiary_green"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>